crates/component-cli/tests/snapshots/test__cli_main_help_snapshot.snap
---
source: crates/component-cli/tests/test.rs
expression: output
---
Unified WebAssembly developer tools

Usage: component [OPTIONS] [COMMAND]

Commands:
  run       Execute a Wasm Component
  init      Create a new wasm component in an existing directory
  install   Install a dependency from an OCI registry
  publish   Publish a component or WIT interface to an OCI registry
  compose   Compose Wasm components from WAC scripts
  local     Detect and manage local WASM files
  registry  Manage local components and packages in OCI registries
  self      Configure the `component(1)` tool, generate completions, & manage state
  help      Print this message or the help of the given subcommand(s)

Options:
  -h, --help     Print help
  -V, --version  Print version

Global Options:
      --color <WHEN>  When to use colored output [default: auto] [possible values: auto, always, never]
      --offline       Run in offline mode
  -v, --verbose...    Increase logging verbosity
  -q, --quiet...      Decrease logging verbosity
